Formatação de Aulas

--- a/HTML/Aulas Udemy/Aula 05- Netflix/Aula 05- Netflix.html
+++ b/HTML/Aulas Udemy/Aula 05- Netflix/Aula 05- Netflix.html
@@ -1,39 +1,46 @@
 <!DOCTYPE html>
-<html lang = "pt-BR">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Netflix</title>
-        <link rel="icon" href="Aula-05-icon-Netflix.png" type="image/png">
-        <link rel="stylesheet" href = "Aula-05-Netflix.css">
-    </head>
-    <body>
-      <header id="menu">
-        <div class="menu-container">
-          <div>
-            <a href="https://www.netflix.com/br/" target="_blank">
-              <img class="logo-netflix" src="Aula-05-Netflix.png" alt="Netflix">
-            </a>
-          </div>
-          <div class="buttom">
-            <a href="https://www.netflix.com/br/login" target="_blank" class="botao-entrar">Entrar</a>
-          </div>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Netflix</title>
+    <link rel="icon" href="Aula-05-icon-Netflix.png" type="image/png">
+    <link rel="stylesheet" href="Aula-05-Netflix.css">
+  </head>
+  <body>
+    <header id="menu">
+      <div class="menu-container">
+        <div>
+          <a href="https://www.netflix.com/br/" target="_blank">
+            <img class="logo-netflix" src="Aula-05-Netflix.png" alt="Netflix">
+          </a>
         </div>
-      </header>
-      
-      <div>
-        <h1 class="titulo-1">
-          <b>Filmes, séries e muito mais, sem limites</b>
-        </h1>
-        <h2 class="subtitulo">Assista onde quiser. Cancele quando quiser.</h2>
-        <h3 class="subtitulo-2">Quer assistir? Informe seu email para criar ou reiniciar sua assinatura.</h3>
+        <div class="buttom">
+          <a
+            href="https://www.netflix.com/br/login"
+            target="_blank"
+            class="botao-entrar"
+            >Entrar</a
+          >
+        </div>
       </div>
-      
-      <div id="Acesso">
-        <form action="Formulario.html" method="get">
-          <input type="email" name="Email" id="email" placeholder="Email">
-          <input type="submit" value="Vamos lá >" id="enviar">
-        </form>
-      </div>
-    </body>
-    </html>
+    </header>
+
+    <div>
+      <h1 class="titulo-1">
+        <b>Filmes, séries e muito mais, sem limites</b>
+      </h1>
+      <h2 class="subtitulo">Assista onde quiser. Cancele quando quiser.</h2>
+      <h3 class="subtitulo-2">
+        Quer assistir? Informe seu email para criar ou reiniciar sua assinatura.
+      </h3>
+    </div>
+
+    <div id="Acesso">
+      <form action="Formulario.html" method="get">
+        <input type="email" name="Email" id="email" placeholder="Email">
+        <input type="submit" value="Vamos lá >" id="enviar">
+      </form>
+    </div>
+  </body>
+</html>
