--- a/HTML/Aulas Udemy/Aula 15 - Float e display.html
+++ b/HTML/Aulas Udemy/Aula 15 - Float e display.html
@@ -1,61 +1,72 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Float e Display</title>
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        .conteiner{
-            padding: 15px;
-        }
-        /*.conteiner::after{
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      .conteiner {
+        padding: 15px;
+      }
+      /*.conteiner::after{
             content: '';
             display:block;
             clear: both;
         }*/
-        .conteiner .grid{
-            width: 33.33%;
-            height: 300px;
-            float: left;
-            padding: 15px;
-        }
-        .conteiner .grid .content{
-            text-align: center;
-            width: 100%;
-            height: 100%;
-            background-color: red;
-        }
-        p{
-            clear: both;
-        }
+      .conteiner .grid {
+        width: 33.33%;
+        height: 300px;
+        float: left;
+        padding: 15px;
+      }
+      .conteiner .grid .content {
+        text-align: center;
+        width: 100%;
+        height: 100%;
+        background-color: red;
+      }
+      p {
+        clear: both;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="conteiner">
-        <div class="grid">
-            <div class="content">Conteúdo</div>
-        </div>
-        <div class="grid">
-            <div class="content">Conteúdo</div>
-        </div>
-        <div class="grid">
-            <div class="content">Conteúdo</div>
-        </div>
-        <div class="grid">
-            <div class="content">Conteúdo</div>
-        </div>
-        <div class="grid">
-            <div class="content">Conteúdo</div>
-        </div>
-        <div class="grid">
-            <div class="content">Conteúdo</div>
-        </div>
+      <div class="grid">
+        <div class="content">Conteúdo</div>
+      </div>
+      <div class="grid">
+        <div class="content">Conteúdo</div>
+      </div>
+      <div class="grid">
+        <div class="content">Conteúdo</div>
+      </div>
+      <div class="grid">
+        <div class="content">Conteúdo</div>
+      </div>
+      <div class="grid">
+        <div class="content">Conteúdo</div>
+      </div>
+      <div class="grid">
+        <div class="content">Conteúdo</div>
+      </div>
     </div>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quas pariatur dolore molestias ducimus minus. Maiores voluptate quos assumenda nobis iure illo? Debitis repellat aut, maiores quia magnam quibusdam sint? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis nihil ad sunt! Quos ab ipsam placeat eius. A, deserunt, natus magnam, est velit explicabo quis quia odio fugit cupiditate mollitia?Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus saepe autem recusandae unde totam ducimus qui molestiae tempore vero, praesentium, pariatur voluptatibus quisquam possimus maiores animi aliquid molestias fugiat amet!</p>
-</body>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, quas
+      pariatur dolore molestias ducimus minus. Maiores voluptate quos assumenda
+      nobis iure illo? Debitis repellat aut, maiores quia magnam quibusdam sint?
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Reiciendis nihil
+      ad sunt! Quos ab ipsam placeat eius. A, deserunt, natus magnam, est velit
+      explicabo quis quia odio fugit cupiditate mollitia?Lorem ipsum dolor, sit
+      amet consectetur adipisicing elit. Doloribus saepe autem recusandae unde
+      totam ducimus qui molestiae tempore vero, praesentium, pariatur
+      voluptatibus quisquam possimus maiores animi aliquid molestias fugiat
+      amet!
+    </p>
+  </body>
 </html>
