--- a/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
+++ b/HTML/Aulas Udemy/Aula 16 - Unidades de medida/Código-HTML.html
@@ -1,75 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta
+      name="“description”"
+      content="Website expositivo da marca TechVanguarda especializada em meios tecnológicos."
+    >
+    <meta
+      name="“keywords”"
+      content="TechVanguarda, tecnologia, projeto, Clique, começou, suporte"
+    >
+    <title>Exercício Aula 16</title>
+    <link rel="stylesheet" href="Código-CSS.css">
+    <link rel="icon" href="Logo-TechVanguard.png">
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name=“description” content="Website expositivo da marca TechVanguarda especializada em meios tecnológicos.">
-  <meta name=“keywords” content="TechVanguarda, tecnologia, projeto, Clique, começou, suporte">
-  <title>Exercício Aula 16</title>
-  <link rel="stylesheet" href="Código-CSS.css"> 
-  <link rel="icon" href="Logo-TechVanguard.png">
-</head>
-
-<body>
-  <!--MENU PRINCIPAL-->
- <div>
-  <header>
-    <div class="conteiner">
-      <a href="http://127.0.0.1:5500/HTML/Aulas%20Udemy/Aula%2016%20-%20Unidades%20de%20medida/C%C3%B3digo-HTML.html" target="_blank"><img class="iLogo-TechVanguard" src="Logo-TechVanguard.png" alt="Logo-TechVanguard"></a>
-        <ul class="conteiner-menu">
-          <li><a href="#"target="_blank">Home</a></li>
-          <li><a href="#"target="_blank">Services</a></li>
-          <li><a href="#"target="_blank">Portfólio</a></li>
-          <li><a href="#"target="_blank">Blog</a></li>
-          <li><a href="#" target="_blank">Suport</a></li>
-        </ul>
-      </div>
-    </header>
-  </div>
-  <!--MENU DE LINKS-->
-  <div>
-    <nav>
-      <div class="Menu-nav">
-        <p><a href="#one">Features</a></p>
-        <p><a href="#two">About</a></p>
-        <p><a href="#three">Statics</a></p>
-        <p><a href="#four">Info</a></p>
+  <body>
+    <!--MENU PRINCIPAL-->
+    <div>
+      <header>
+        <div class="conteiner">
+          <a
+            href="http://127.0.0.1:5500/HTML/Aulas%20Udemy/Aula%2016%20-%20Unidades%20de%20medida/C%C3%B3digo-HTML.html"
+            target="_blank"
+            ><img
+              class="iLogo-TechVanguard"
+              src="Logo-TechVanguard.png"
+              alt="Logo-TechVanguard"
+          ></a>
+          <ul class="conteiner-menu">
+            <li><a href="#" target="_blank">Home</a></li>
+            <li><a href="#" target="_blank">Services</a></li>
+            <li><a href="#" target="_blank">Portfólio</a></li>
+            <li><a href="#" target="_blank">Blog</a></li>
+            <li><a href="#" target="_blank">Suport</a></li>
+          </ul>
         </div>
-    </nav>
-  </div>
-  <!--CONTEÚDO DA PÁGINA-->
-  <div class="Features" id="one">
-    <img src="Logo-TechVanguard.png" alt="Logo">
-    <div class="text-Features">
-      <h1>TECHVANGUARDA</h1>
-      <br> 
-    <h2>Nossos Recursos em Destaque</h2>  
-    <p>Bem-vindo à página web da TechVanguarda, onde a inovação e o avanço tecnológico são a nossa essência. Estamos entusiasmados por apresentar a você uma série de recursos excepcionais que tornarão a sua experiência online mais eficiente, envolvente e inspiradora. Confira abaixo alguns dos nossos recursos exclusivos:</p>
-    <ol type="1">
-      <li>Navegue facilmente em um design moderno e limpo.</li>
-      <li>Encontre o que precisa com nossa busca avançada.</li>
-      <li>Receba recomendações relevantes baseadas em suas preferências.</li>
-      <li>Suporte ao cliente disponível a qualquer momento.</li>
-      <li>Mantenha-se protegido com nossa criptografia de última geração.Fique atualizado com nossas últimas notícias e atualizações.</li>
-      <li>Compartilhe descobertas com amigos via redes sociais.</li>
-      <li>Experimente em dispositivos móveis.</li>
-      <li>Leia artigos informativos em nosso blog.</li>
-      <li>Compre produtos e serviços sem complicações.</li>
-    </ol>
-    <p>Na TechVanguarda, estamos comprometidos em proporcionar a você uma experiência online excepcional. Explore nossos recursos inovadores e descubra como estamos moldando o futuro da tecnologia. Junte-se a nós nesta jornada emocionante!</p>
-  </div>
-    <button type="submit" name="confira" id="iconfira">CONFIRA!</button>
-</div>
+      </header>
+    </div>
+    <!--MENU DE LINKS-->
+    <div>
+      <nav>
+        <div class="Menu-nav">
+          <p><a href="#one">Features</a></p>
+          <p><a href="#two">About</a></p>
+          <p><a href="#three">Statics</a></p>
+          <p><a href="#four">Info</a></p>
+        </div>
+      </nav>
+    </div>
+    <!--CONTEÚDO DA PÁGINA-->
+    <div class="Features" id="one">
+      <img src="Logo-TechVanguard.png" alt="Logo" >
+      <div class="text-Features">
+        <h1>TECHVANGUARDA</h1>
+        <br >
+        <h2>Nossos Recursos em Destaque</h2>
+        <p>
+          Bem-vindo à página web da TechVanguarda, onde a inovação e o avanço
+          tecnológico são a nossa essência. Estamos entusiasmados por apresentar
+          a você uma série de recursos excepcionais que tornarão a sua
+          experiência online mais eficiente, envolvente e inspiradora. Confira
+          abaixo alguns dos nossos recursos exclusivos:
+        </p>
+        <ol type="1">
+          <li>Navegue facilmente em um design moderno e limpo.</li>
+          <li>Encontre o que precisa com nossa busca avançada.</li>
+          <li>
+            Receba recomendações relevantes baseadas em suas preferências.
+          </li>
+          <li>Suporte ao cliente disponível a qualquer momento.</li>
+          <li>
+            Mantenha-se protegido com nossa criptografia de última geração.Fique
+            atualizado com nossas últimas notícias e atualizações.
+          </li>
+          <li>Compartilhe descobertas com amigos via redes sociais.</li>
+          <li>Experimente em dispositivos móveis.</li>
+          <li>Leia artigos informativos em nosso blog.</li>
+          <li>Compre produtos e serviços sem complicações.</li>
+        </ol>
+        <p>
+          Na TechVanguarda, estamos comprometidos em proporcionar a você uma
+          experiência online excepcional. Explore nossos recursos inovadores e
+          descubra como estamos moldando o futuro da tecnologia. Junte-se a nós
+          nesta jornada emocionante!
+        </p>
+      </div>
+      <button type="submit" name="confira" id="iconfira">CONFIRA!</button>
+    </div>
 
-  <div class="p2" id="two">
-  </div>
-  <div class="p3" id="three">
-    <p>Teste 03</p>
-  </div>
-  <div class="p4" id="four">
-    <p>Teste 04</p>
-  </div>
-</body>
-
+    <div class="p2" id="two"></div>
+    <div class="p3" id="three">
+      <p>Teste 03</p>
+    </div>
+    <div class="p4" id="four">
+      <p>Teste 04</p>
+    </div>
+  </body>
 </html>
