--- a/HTML/Armazém Curso em video/Desafio 01.html
+++ b/HTML/Armazém Curso em video/Desafio 01.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desafio 011</title>
-</head>
-<body>
-    <h1>
-        Desafio das Mensagens
-    </h1>
+  </head>
+  <body>
+    <h1>Desafio das Mensagens</h1>
 
     <p>
-    *Um<br>
-    **Dois<br>
-    ***Três<br>
-    ****Quatro<br>
+      *Um<br>
+      **Dois<br>
+      ***Três<br>
+      ****Quatro<br>
     </p>
 
     <p>
-    ****Quatro<br>
-    ***Três<br>
-    **Dois<br>
-    *Um<br>
+      ****Quatro<br>
+      ***Três<br>
+      **Dois<br>
+      *Um<br>
     </p>
-</body>
+  </body>
 </html>
