--- a/HTML/Aulas Udemy/Aula 04-Semântica.html
+++ b/HTML/Aulas Udemy/Aula 04-Semântica.html
@@ -1,60 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="utf-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Semântica HTML</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <main>
-    <header id = "home">
+      <header id="home">
         <h1>
-        <a href="#"> Jogos Online</a>
+          <a href="#"> Jogos Online</a>
         </h1>
-    </header>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-        Tenetur corrupti reprehenderit nemo repudiandae,
-         ipsam possimus atque pariatur, earum ipsum porro veniam
-         iste neque similique natus reiciendis facere eum? Commodi, quam.
-    </p>
-    <aside>
+      </header>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+        corrupti reprehenderit nemo repudiandae, ipsam possimus atque pariatur,
+        earum ipsum porro veniam iste neque similique natus reiciendis facere
+        eum? Commodi, quam.
+      </p>
+      <aside>
         <nav>
-            <ul>
-                <li><a href="#">texto 1</a></li>
-                <li><a href="#">texto 1</a></li>
-                <li><a href="#">texto 1</a></li>
-                <li><a href="#">texto 1</a></li>
-            </ul>
+          <ul>
+            <li><a href="#">texto 1</a></li>
+            <li><a href="#">texto 1</a></li>
+            <li><a href="#">texto 1</a></li>
+            <li><a href="#">texto 1</a></li>
+          </ul>
         </nav>
-    </aside>
-    <section>
+      </aside>
+      <section>
         <header>
-            <h2>Categorias</h2>
+          <h2>Categorias</h2>
         </header>
         <article>
-            <h3>Ação</h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-             Quisquam quibusdam assumenda est architecto quis ut quas in vitae velit fugit numquam accusamus ea neque nesciunt, nam,
-              corrupti distinctio saepe amet!</p>
+          <h3>Ação</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quibusdam assumenda est architecto quis ut quas in vitae velit fugit
+            numquam accusamus ea neque nesciunt, nam, corrupti distinctio saepe
+            amet!
+          </p>
         </article>
         <article>
-            <h3>Aventura</h3>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-         Quisquam quibusdam assumenda est architecto quis ut quas in vitae velit fugit numquam accusamus ea neque nesciunt, nam,
-          corrupti distinctio saepe amet!</p>
-        </article>  
-        <article>  
-            <h3>Terror</h3>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-     Quisquam quibusdam assumenda est architecto quis ut quas in vitae velit fugit numquam accusamus ea neque nesciunt, nam,
-      corrupti distinctio saepe amet!</p>
+          <h3>Aventura</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quibusdam assumenda est architecto quis ut quas in vitae velit fugit
+            numquam accusamus ea neque nesciunt, nam, corrupti distinctio saepe
+            amet!
+          </p>
         </article>
-    </section>
-</main>
-    <footer>
-        Meu Endereço
-    </footer>
-</body>
+        <article>
+          <h3>Terror</h3>
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quisquam
+            quibusdam assumenda est architecto quis ut quas in vitae velit fugit
+            numquam accusamus ea neque nesciunt, nam, corrupti distinctio saepe
+            amet!
+          </p>
+        </article>
+      </section>
+    </main>
+    <footer>Meu Endereço</footer>
+  </body>
 </html>
