--- a/HTML/Aulas Udemy/Aula 07- Menu.html
+++ b/HTML/Aulas Udemy/Aula 07- Menu.html
@@ -1,63 +1,64 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Aula 07 - Menu</title>
     <style>
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-        body{
-            background-color: rgb(170, 152, 243);
-        }
-        nav{
-            background-color: rgb(65, 21, 120);
-            align-items: center;
-        }
-        ul{
-            list-style-type: none;
-            display: flex;
-        }
-        nav ul li a{
-            text-decoration: none;
-            padding: 25px;
-            padding-left: 35px;
-            color:white;
-            display: block;
-            text-transform: uppercase;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-        nav a:hover{
-            background-color: rgba(255, 255, 255, 0.1);
-        }
-        .titulo{
-            color: white;
-            width: 550px;
-            margin: 40px;
-            background-color: black;
-            font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        }
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+      body {
+        background-color: rgb(170, 152, 243);
+      }
+      nav {
+        background-color: rgb(65, 21, 120);
+        align-items: center;
+      }
+      ul {
+        list-style-type: none;
+        display: flex;
+      }
+      nav ul li a {
+        text-decoration: none;
+        padding: 25px;
+        padding-left: 35px;
+        color: white;
+        display: block;
+        text-transform: uppercase;
+        font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+          Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+          sans-serif;
+      }
+      nav a:hover {
+        background-color: rgba(255, 255, 255, 0.1);
+      }
+      .titulo {
+        color: white;
+        width: 550px;
+        margin: 40px;
+        background-color: black;
+        font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+          sans-serif;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <nav class="menu">
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Localization</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Suport</a></li>
-        </ul>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Localization</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Suport</a></li>
+      </ul>
     </nav>
     <header>
-        <h1 class="titulo">
-            FOTOTETA NO MEU PV NUNK???
-        </h1>
+      <h1 class="titulo">FOTOTETA NO MEU PV NUNK???</h1>
     </header>
-        <!--<dl>
+    <!--<dl>
         <dt>    
     Lista de descrição</dt>
         <dd>Descreve elementos.</dd>
@@ -98,6 +99,5 @@
         <li>haha</li>
         <li>haha</li>
     </ol>-->
-
-</body>
+  </body>
 </html>
