--- a/HTML/Aulas Udemy/Aula 09- Formulário.html
+++ b/HTML/Aulas Udemy/Aula 09- Formulário.html
@@ -1,96 +1,148 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Aula 09 - Formulário</title>
     <style>
-        *{
-            font-family: Arial, Helvetica, sans-serif;
-        }
-        body{
-            background-color: rgba(159, 208, 191, 0.579);
-        }
-        body div{
-            width: 500px;
-            margin: 50px;
-        }
-        body div form{
-            background-color:rgba(207, 139, 255, 0.536);
-            border: 5px solid black;
-            width: 500px;
-        }
-        legend{
-            background-color: black;
-            color: white;
-            text-transform: uppercase;
-        }
-        fieldset{
-            border-style: none;
-        }
+      * {
+        font-family: Arial, Helvetica, sans-serif;
+      }
+      body {
+        background-color: rgba(159, 208, 191, 0.579);
+      }
+      body div {
+        width: 500px;
+        margin: 50px;
+      }
+      body div form {
+        background-color: rgba(207, 139, 255, 0.536);
+        border: 5px solid black;
+        width: 500px;
+      }
+      legend {
+        background-color: black;
+        color: white;
+        text-transform: uppercase;
+      }
+      fieldset {
+        border-style: none;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div>
-        <form method="get" target="_blank">
-            <fieldset>
-                <legend><b>Login</b></legend>
-                <p>
-                <label for="iEmail">Email:</label>
-                <input type="email" name="email" id="iEmail" placeholder="Email" autocomplete="email" required size="40">
-                </p>
-                <p>
-                <label for="isenha">Senha:</label>
-                <input type="password" name="senha" id="isenha" placeholder="Digite sua senha" required size="39">
-                </p>
-            <p>
-                <label for="inome">Nome:</label>
-                <input name="nome" id="inome" placeholder="Nome" required size="40">
-            </p>
-            <p>
-                <label for="iinstituição">Qual sua instituição?</label>
-                <select id="iinstituição" name="instituição:">
-                    <option value="opção1" label="IFPE">
-                    <option value="opção2" label="UFPE">
-                    <option value="opção3" label="UPE">
-                </select>
-            </p>
-            <p>
-                Gênero:<br>
-                <input type="radio" name="Genero" id="Feminino" value="Feminino" required>
-                <label for="Feminino">Feminino</label>
+      <form method="get" target="_blank">
+        <fieldset>
+          <legend><b>Login</b></legend>
+          <p>
+            <label for="iEmail">Email:</label>
+            <input
+              type="email"
+              name="email"
+              id="iEmail"
+              placeholder="Email"
+              autocomplete="email"
+              required
+              size="40"
+            >
+          </p>
+          <p>
+            <label for="isenha">Senha:</label>
+            <input
+              type="password"
+              name="senha"
+              id="isenha"
+              placeholder="Digite sua senha"
+              required
+              size="39"
+            >
+          </p>
+          <p>
+            <label for="inome">Nome:</label>
+            <input
+              name="nome"
+              id="inome"
+              placeholder="Nome"
+              required
+              size="40"
+            >
+          </p>
+          <p>
+            <label for="iinstituição">Qual sua instituição?</label>
+            <select id="iinstituição" name="instituição:">
+              <option value="opção1" label="IFPE"></option>
+              <option value="opção2" label="UFPE"></option>
+              <option value="opção3" label="UPE"></option>
+            </select>
+          </p>
+          <p>
+            Gênero:<br >
+            <input
+              type="radio"
+              name="Genero"
+              id="Feminino"
+              value="Feminino"
+              required
+            >
+            <label for="Feminino">Feminino</label>
 
-                <input type="radio" name="Genero" id="Masculino" value="Masculino" required>
-                <label for="Masculino">Masculino</label>
-            </p>
-            <p>
-                <label for="file">Sua foto:</label>
-                <input type="file" name="arquivo" id="file" required accept="image/*">
-            </p>
-            <p>
-                <label for="idata">Data de Preencimento:</label>
-                <input type="datetime-local" name="data" id="idata" required>
-            </p>
-            <p>
-                <label for="number">N° da Ficha:</label>
-                <input type="number" name="numero" id="number" required min="0" max="1000">
-            </p>
-            <p>
-                <label for="cor">Cor favorita:</label>
-                <input type="color" name="cor" id="cor">
-            </p>
-            <p>
-                <button type="submit">Enviar</button>
-                <button type="reset">Resetar</button>
-            </p>
-            <p>
-                <label for="iarea">Fale um pouco sobre você:</label>
-            </p>
-            <p>
-                <textarea id="iarea" name="Biografia" cols="60" rows="5" required></textarea>
-            </p>
+            <input
+              type="radio"
+              name="Genero"
+              id="Masculino"
+              value="Masculino"
+              required
+            >
+            <label for="Masculino">Masculino</label>
+          </p>
+          <p>
+            <label for="file">Sua foto:</label>
+            <input
+              type="file"
+              name="arquivo"
+              id="file"
+              required
+              accept="image/*"
+            >
+          </p>
+          <p>
+            <label for="idata">Data de Preencimento:</label>
+            <input type="datetime-local" name="data" id="idata" required >
+          </p>
+          <p>
+            <label for="number">N° da Ficha:</label>
+            <input
+              type="number"
+              name="numero"
+              id="number"
+              required
+              min="0"
+              max="1000"
+            >
+          </p>
+          <p>
+            <label for="cor">Cor favorita:</label>
+            <input type="color" name="cor" id="cor" >
+          </p>
+          <p>
+            <button type="submit">Enviar</button>
+            <button type="reset">Resetar</button>
+          </p>
+          <p>
+            <label for="iarea">Fale um pouco sobre você:</label>
+          </p>
+          <p>
+            <textarea
+              id="iarea"
+              name="Biografia"
+              cols="60"
+              rows="5"
+              required
+            ></textarea>
+          </p>
         </fieldset>
-    </form>
+      </form>
     </div>
-</body>
+  </body>
 </html>
